2001-08-18  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* lisp/nnshimbun.el (gnus-group-make-shimbun-group): Call
	`shimbun-groups' to detect avaiable groups of specified server.

2001-08-17  KANEMATSU Daiji  <kanematu@sra.co.jp>

	* lisp/message.el (message-signature-separator-for-insertion): New
	customizable variable which is used for signature separator.
	* lisp/message.el (message-insert-signature): Use variable
	`message-signature-separator-for-insertion' instead of hard code.

2001-08-15  Yoichi NAKAYAMA  <yoichi@eken.phys.nagoya-u.ac.jp>

	* texi/gnus-ja.texi (Browsing the Web): Fix typo.

2001-08-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 06.

2001-08-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-art.el (gnus-request-article-this-buffer): Insert an
	article into `gnus-original-article-buffer' instead of
	`gnus-article-buffer'.

2001-07-31  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/mml2015.el: Require `gnus-clfns' when compiling.
	* lisp/gnus-clfns.el (string-to-list): New compiler macro.

2001-07-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-sum.el (gnus-select-newsgroup): Don't examine cached
	articles with `gnus-cache-articles-in-group' even if the current
	group is not a virtual group (see ChangeLog.1 1999-03-02).

2001-07-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 05.

	* lisp/nnmh.el (nnmh-retrieve-parsed-headers): Abolished.

	* lisp/gnus-sum.el (gnus-get-newsgroup-headers-xover): Don't use
	`gnus-retrieve-parsed-headers'.
	(gnus-fetch-headers): Ditto.

	* lisp/gnus-int.el (gnus-retrieve-parsed-headers): Abolished.

	* lisp/gnus-cache.el (gnus-cache-braid-headers): Abolished.
	(gnus-cache-retrieve-parsed-headers): Abolished.

2001-07-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/nnshimbun.el (nnshimbun-request-expire-articles): Bind
	`nnmail-expiry-wait-function' to nil if the group's parameter